# Magician_Defects_Detection

./: .gitignore  .gitmodules  README.md
computing_point_cloud/: CMakeLists.txt  mattonella.stl
computing_point_cloud/src/: define_set_of_p_to_analize.cpp  defines.hpp  defines.hpp.in  hough_transform.cpp  pc_stl_relationship copy 2.cpp  pc_stl_relationship copy.cpp  pc_stl_relationship.cpp  point_cloud_sub copy.cpp  point_cloud_sub.cpp  raycast _sparse.cpp  raycast.cpp  raycast_vertex_update.cpp  raycast_without_distances.cpp  showSTLpc.cpp  showSTLpc_moved.cpp  stl_point_cloud.cpp  test_libigl.cpp
display_urdf/: CMakeLists.txt  package.xml
display_urdf/launch/: launch.py
display_urdf/urdf/: defects1.urdf
display_with_rviz2/: CMakeLists.txt
display_with_rviz2/launch/: launch.py  launch_with_raycast.py  launch_with_rosbag.py
display_with_rviz2/rviz/: rviz.rviz
display_with_rviz2/stl/: defect_mesh_11mm.stl  defectless_mesh_5mm.stl  defectless_mesh_7mm.stl  mattonella.stl  mattonella1.stl  mattonella2.stl
display_with_rviz2/urdf/: defects1.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/computing_point_cloud/lib/computing_point_cloud/: stl_point_cloud
install/computing_point_cloud/share/computing_point_cloud/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/computing_point_cloud/share/computing_point_cloud/cmake/: computing_point_cloudConfig.cmake
install/display_with_rviz2/share/display_with_rviz2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/display_with_rviz2/share/display_with_rviz2/launch/: launch_average_q.py  launch_with_rosbag.py  launch_without_kalman.py
install/optitrack2rviz/lib/optitrack2rviz/: pose_to_tf_STL  pose_to_tf_camera
install/optitrack2rviz/share/optitrack2rviz/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/optitrack2rviz/share/optitrack2rviz/cmake/: optitrack2rvizConfig.cmake
install/optitrack_interface/lib/optitrack_interface/: optitrack
install/optitrack_interface/share/optitrack_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.sh
install/realsense2_description/share/ament_index/resource_index/parent_prefix_path/: realsense2_description
install/realsense2_description/share/realsense2_description/: local_setup.sh  package.sh
log/: latest_build
optitrack2rviz/: CMakeLists.txt  package.xml
optitrack2rviz/src/: average_quaternions.cpp  kalman_filter.cpp  pose_to_tf_STL.cpp  pose_to_tf_camera.cpp
optitrack_interface/optitrack_interface/: optitrack.py
